@@ -1,8 +1,8 @@
 CORE
 type_parameters1.sv
 
-^\[main\.p1\] always \$bits\(main\.T1\) == 1: PROVED .*$
-^\[main\.p2\] always \$bits\(main\.T2\) == 32: PROVED .*$
+^\[main\.p1\] always \$bits\(bool\) == 1: PROVED .*$
+^\[main\.p2\] always \$bits\(\[31:0\]\) == 32: PROVED .*$
 ^EXIT=0$
 ^SIGNAL=0$
 --
